peg/calculator/calculator.peg
# Copyright 2010 The Go Authors. All rights reserved.
# Use of this source code is governed by a BSD-style
# license that can be found in the LICENSE file.

package main

type Calculator Peg {}

expr <- ws e1 !.
e1 <- ws value (ws op ws value ws)*
value <- < [0-9]+ >
       / open e1 close
op <- add / minus / multiply / divide
add <- '+'
minus <- '-'
multiply <- '*'
divide <- '/'

open <- '(' ws
close <- ')' ws
ws <- ( ' ' / '\t' )*
